--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@
     </footer>
   </div>
 
+  <!-- Floating Cat Feature -->
+  <div class="floating-cat-container">
+    <div class="speech-bubble" id="catSpeechBubble"></div>
+    <img src="images/kitty.png" alt="Floating Cat" class="floating-cat" id="floatingCat">
+  </div>
   
 </body>
 <script src="script.js"></script>
