--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </a>
           </div>
           <div class="card-wrapper">
-            <a href="#" class="card-link">
+            <a href="skincare.html" class="card-link">
               <section class="card">
                 <h2>Skin Care Tips</h2>
                 <p>Simple and effective skin care habits that work for me — and may work for you!</p>
