--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
         </div>
       </section>
 
+
+
       <section class="card-section hidden" data-category="portfolio">
         <div class="card-group">
           <div class="card-wrapper">
@@ -100,7 +102,12 @@
             </a>
           </div>
         </div>
+
+
       </section>
+
+
+
     </main>
 
     <footer class="site-footer">
@@ -122,10 +129,10 @@
         <div class="footer-section social">
           <h3>Connect With Me</h3>
           <div class="social-icons">
-            <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+            <a href="facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="x.com" target="_blank" aria-label="Twitter"><i class="fab fa-x"></i></a>
+            <a href="LinkedIn.com" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
           </div>
         </div>
       </div>
@@ -134,14 +141,15 @@
       </div>
     </footer>
   </div>
+</body>
 
-  <!-- Floating Cat Feature -->
+
+              <!-- Floating Cat Feature -->
   <div class="floating-cat-container">
     <div class="speech-bubble" id="catSpeechBubble"></div>
     <img src="images/kitty.png" alt="Floating Cat" class="floating-cat" id="floatingCat">
   </div>
-  
-</body>
+
 <script src="script.js"></script>
 
 </html>
