applied footer on Me and Skincare tips

--- a/me.html
+++ b/me.html
@@ -145,8 +145,35 @@
         <a href="index.html" class="back-button">Back to Home</a>
       </section>
     </main>
-    <footer>
-      <p>&copy; 2025 Karen's Coffee & Cats. Made with love and cat hair.</p>
+     <footer class="site-footer">
+      <div class="footer-content">
+        <div class="footer-section about">
+          <h3>About Karen's Corner</h3>
+          <p>Brewing life one paw at a time. This is my little space to share passions, tips, and adventures with coffee, cats, and all things lovely!</p>
+        </div>
+        <div class="footer-section links">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="me.html">About Me</a></li>
+            <li><a href="skincare.html">Skincare Tips</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Portfolio</a></li>
+          </ul>
+        </div>
+        <div class="footer-section social">
+          <h3>Connect With Me</h3>
+          <div class="social-icons">
+            <a href="facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="x.com" target="_blank" aria-label="Twitter"><i class="fab fa-x"></i></a>
+            <a href="LinkedIn.com" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2025 Karen's Coffee & Cats. Made with love and cat hair.</p>
+      </div>
     </footer>
   </div>
 
