added profile links

--- a/me.html
+++ b/me.html
@@ -154,11 +154,8 @@
         <div class="footer-section links">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="me.html">About Me</a></li>
-            <li><a href="skincare.html">Skincare Tips</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Portfolio</a></li>
+             <a href="https://www.facebook.com/karengaye888" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/_karengaye/?fbclid=IwY2xjawLUDVlleHRuA2FlbQIxMABicmlkETFhWGtFSGIyQ29aS00xZHJXAR5tNmt7-rL-ysPkVC7OD6AZ691Wc7Tse3_NK1w_5ay1a6tXi2HfGp7ugU5CkA_aem_EddR91RVGTtV1Jp_wDuCNw#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
           </ul>
         </div>
         <div class="footer-section social">
