--- a/skincare.html
+++ b/skincare.html
@@ -133,10 +133,8 @@
         <div class="footer-section social">
           <h3>Connect With Me</h3>
           <div class="social-icons">
-            <a href="facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="x.com" target="_blank" aria-label="Twitter"><i class="fab fa-x"></i></a>
-            <a href="LinkedIn.com" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.facebook.com/karengaye888" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/_karengaye/?fbclid=IwY2xjawLUDVlleHRuA2FlbQIxMABicmlkETFhWGtFSGIyQ29aS00xZHJXAR5tNmt7-rL-ysPkVC7OD6AZ691Wc7Tse3_NK1w_5ay1a6tXi2HfGp7ugU5CkA_aem_EddR91RVGTtV1Jp_wDuCNw#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
           </div>
         </div>
       </div>
