--- a/skincare.html
+++ b/skincare.html
@@ -114,7 +114,9 @@
         <a href="index.html" class="back-button">Back to Home</a>
       </section>
     </main>
-     <footer class="site-footer">
+
+
+    <footer class="site-footer">
       <div class="footer-content">
         <div class="footer-section about">
           <h3>About Karen's Corner</h3>
@@ -130,11 +132,23 @@
             <li><a href="#">Portfolio</a></li>
           </ul>
         </div>
-        <div class="footer-section social">
-          <h3>Connect With Me</h3>
-          <div class="social-icons">
-            <a href="https://www.facebook.com/karengaye888" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/_karengaye/?fbclid=IwY2xjawLUDVlleHRuA2FlbQIxMABicmlkETFhWGtFSGIyQ29aS00xZHJXAR5tNmt7-rL-ysPkVC7OD6AZ691Wc7Tse3_NK1w_5ay1a6tXi2HfGp7ugU5CkA_aem_EddR91RVGTtV1Jp_wDuCNw#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <div class="footer-section social-and-programmer">
+          <div class="social">
+            <h3>Connect With Me</h3>
+            <div class="social-icons">
+              <a href="https://www.facebook.com/karengaye888" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://www.instagram.com/_karengaye/?fbclid=IwY2xjawLUDVlleHRuA2FlbQIxMABicmlkETFhWGtFSGIyQ29aS00xZHJXAR5tNmt7-rL-ysPkVC7OD6AZ691Wc7Tse3_NK1w_5ay1a6tXi2HfGp7ugU5CkA_aem_EddR91RVGTtV1Jp_wDuCNw#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+              <!-- Add more social links as needed -->
+            </div>
+          </div>
+          <div class="programmer-details">
+            <h3>Developed By</h3>
+            <p>Reuel Josh M. Eustaquio</p>
+            <div class="social-icons">
+              <a href="https://www.facebook.com/reueljosh.eustaquio" target="_blank" aria-label="Programmer Facebook"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://www.instagram.com/Juzswa/?fbclid=IwY2xjawLUEZFleHRuA2FlbQIxMABicmlkETFEaGpYYnJvYWIxTGpuc29YAR4biJ_k4-19cKHmmlWTaVLqp6i10s7HBq5KPWvC_m-4sg-KvbD1wlBa6Hx5qw_aem_uKq_0znbt5Coz4D2BWM56w#" target="_blank" aria-label="Programmer Instagram"><i class="fab fa-instagram"></i></a>
+              <a href="https://github.com/juswa77" target="_blank" aria-label="Programmer GitHub"><i class="fab fa-github"></i></a>
+            </div>
           </div>
         </div>
       </div>
@@ -142,6 +156,7 @@
         <p>&copy; 2025 Karen's Coffee & Cats. Made with love and cat hair.</p>
       </div>
     </footer>
+    
   </div>
 
   <!-- Floating Cat Feature -->
