--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <section class="card-section hidden" data-category="lifestyle">
         <div class="card-group">
           <div class="card-wrapper">
-            <a href="#" class="card-link">
+            <a href="gallery.html" class="card-link">
               <section class="card">
                 <h2>Gallery</h2>
                 <p>A collection of moments, memories, and snapshots I cherish.</p>
