--- a/index.html
+++ b/index.html
@@ -89,8 +89,6 @@
         </div>
       </section>
 
-
-
       <section class="card-section hidden" data-category="portfolio">
         <div class="card-group">
           <div class="card-wrapper">
@@ -102,15 +100,10 @@
             </a>
           </div>
         </div>
-
-
       </section>
-
-
-
     </main>
 
-   <footer class="site-footer">
+    <footer class="site-footer">
       <div class="footer-content">
         <div class="footer-section about">
           <h3>About Karen's Corner</h3>
@@ -122,7 +115,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="me.html">About Me</a></li>
             <li><a href="skincare.html">Skincare Tips</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
             <li><a href="#">Portfolio</a></li>
           </ul>
         </div>
@@ -137,11 +130,11 @@
           </div>
           <div class="programmer-details">
             <h3>Developed By</h3>
-            <p>Reuel Josh M. Eustaquio</p>
+            <p>Mark Jayson G. Malaguit</p>
             <div class="social-icons">
-              <a href="https://www.facebook.com/reueljosh.eustaquio" target="_blank" aria-label="Programmer Facebook"><i class="fab fa-facebook-f"></i></a>
-              <a href="https://www.instagram.com/Juzswa/?fbclid=IwY2xjawLUEZFleHRuA2FlbQIxMABicmlkETFEaGpYYnJvYWIxTGpuc29YAR4biJ_k4-19cKHmmlWTaVLqp6i10s7HBq5KPWvC_m-4sg-KvbD1wlBa6Hx5qw_aem_uKq_0znbt5Coz4D2BWM56w#" target="_blank" aria-label="Programmer Instagram"><i class="fab fa-instagram"></i></a>
-              <a href="https://github.com/juswa77" target="_blank" aria-label="Programmer GitHub"><i class="fab fa-github"></i></a>
+              <a href="https://www.facebook.com/markjayson.malaguit" target="_blank" aria-label="Programmer Facebook"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://www.instagram.com/mark.malaguit/" target="_blank" aria-label="Programmer Instagram"><i class="fab fa-instagram"></i></a>
+              <a href="https://github.com/MarkJaysonMalaguit" target="_blank" aria-label="Programmer GitHub"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -151,15 +144,37 @@
       </div>
     </footer>
   </div>
+
+  <!-- Floating Cat Feature -->
+<div class="floating-cat-container">
+  <div class="speech-bubble" id="catSpeechBubble"></div>
+  <img src="images/kitty.png" alt="Floating Cat" class="floating-cat" id="floatingCat">
+</div>
+
+
+
+ <!-- Floating Spotify Player Toggle Button -->
+<button id="spotifyToggle" class="spotify-toggle-button" title="Toggle Spotify Player">
+  <i class="fab fa-spotify"></i>
+</button>
+
+<!-- Floating Spotify Player -->
+<div class="floating-spotify-container hidden-player" id="floatingSpotifyPlayer">
+  <iframe
+    style="border-radius:12px"
+    src="https://open.spotify.com/embed/playlist/37i9dQZF1EJKmSPnIDIqbT?utm_source=generator"
+    width="100%" height="152" frameborder="0" allowfullscreen=""
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+    loading="lazy">
+  </iframe>
+</div>
+
+
+
+ 
+  
+  <script src="script.js"></script>
+  
+ 
 </body>
-
-
-              <!-- Floating Cat Feature -->
-  <div class="floating-cat-container">
-    <div class="speech-bubble" id="catSpeechBubble"></div>
-    <img src="images/kitty.png" alt="Floating Cat" class="floating-cat" id="floatingCat">
-  </div>
-
-<script src="script.js"></script>
-
 </html>
