--- a/index.html
+++ b/index.html
@@ -162,12 +162,16 @@
 <div class="floating-spotify-container hidden-player" id="floatingSpotifyPlayer">
   <iframe
     style="border-radius:12px"
-    src="https://open.spotify.com/embed/playlist/37i9dQZF1EJKmSPnIDIqbT?utm_source=generator"
-    width="100%" height="152" frameborder="0" allowfullscreen=""
+    src="https://open.spotify.com/embed/playlist/37i9dQZF1DX4WYpdgoIcn6"
+    width="100%"
+    height="152"
+    frameborder="0"
+    allowfullscreen=""
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
     loading="lazy">
   </iframe>
 </div>
+
 
 
 
