--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
 
 
- <!-- Floating Spotify Player -->
+<!-- Floating Spotify Player -->
 <div class="floating-spotify-container hidden-player" id="floatingSpotifyPlayer">
   <iframe
     style="border-radius:12px"
@@ -167,6 +167,10 @@
   </iframe>
 </div>
 
+<!-- Spotify Toggle Button -->
+<button id="spotifyToggle" class="spotify-toggle-button" title="Toggle Spotify Player">
+  <i class="fab fa-spotify"></i>
+</button>
 
 
 
