--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           </div>
           <div class="programmer-details">
             <h3>Developed By</h3>
-            <p>Mark Jayson G. Malaguit</p>
+            <p>Reuel Josh M. Eustaquio</p>
             <div class="social-icons">
               <a href="https://www.facebook.com/markjayson.malaguit" target="_blank" aria-label="Programmer Facebook"><i class="fab fa-facebook-f"></i></a>
               <a href="https://www.instagram.com/mark.malaguit/" target="_blank" aria-label="Programmer Instagram"><i class="fab fa-instagram"></i></a>
