--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="description" content="Karen's Cat Corner ☕ - A cozy space to explore lifestyle, skincare, gallery, and portfolio with a touch of cat and coffee love!">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Karen's Cat Corner ☕</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="images/cat-icon.png" type="image/png">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Quicksand&display=swap" rel="stylesheet">
+  <link rel="icon" loading="lazy" href="images/cat-icon.png" type="image/png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 </head>
@@ -148,7 +151,7 @@
   <!-- Floating Cat Feature -->
 <div class="floating-cat-container">
   <div class="speech-bubble" id="catSpeechBubble"></div>
-  <img src="images/kitty.png" alt="Floating Cat" class="floating-cat" id="floatingCat">
+  <img src="images/kitty.png" loading="lazy" alt="Floating Cat" class="floating-cat" id="floatingCat">
 </div>
 
 
@@ -176,7 +179,7 @@
 
  
   
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
   
  
 </body>
