--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Karen's Cat Corner ☕</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" loading="lazy" href="images/cat-icon.png" type="image/png">
+  <link rel="icon" loading="lazy" href="images/cat-icon.webp" type="image/png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
@@ -151,7 +151,7 @@
   <!-- Floating Cat Feature -->
 <div class="floating-cat-container">
   <div class="speech-bubble" id="catSpeechBubble"></div>
-  <img src="images/kitty.png" loading="lazy" alt="Floating Cat" class="floating-cat" id="floatingCat">
+  <img src="images/kitty.webp" loading="lazy" alt="Floating Cat" class="floating-cat" id="floatingCat">
 </div>
 
 
