--- a/me.html
+++ b/me.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Karen - About Me</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="images/cat-icon.png" type="image/png">
+  <link rel="icon" href="images/cat-icon.webp" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Quicksand&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
@@ -195,7 +195,7 @@
   <!-- Floating Cat Feature -->
   <div class="floating-cat-container">
     <div class="speech-bubble" id="catSpeechBubble"></div>
-    <img src="images/kitty.png" alt="Floating Cat" class="floating-cat" id="floatingCat">
+    <img src="images/kitty.webp" alt="Floating Cat" class="floating-cat" id="floatingCat">
   </div>
 
 
