--- a/gallery.html
+++ b/gallery.html
@@ -104,16 +104,19 @@
           <h3>About Karen's Corner</h3>
           <p>Brewing life one paw at a time. This is my little space to share passions, tips, and adventures with coffee, cats, and all things lovely!</p>
         </div>
-        <div class="footer-section links">
-          <h3>Quick Links</h3>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="me.html">About Me</a></li>
-            <li><a href="skincare.html">Skincare Tips</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Portfolio</a></li>
-          </ul>
-        </div>
+      
+<div class="footer-section links">
+  <h3>Quick Links</h3>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="me.html">About Me</a></li>
+    <li><a href="skincare.html">Skincare Tips</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
+    <li><a href="#">Portfolio</a></li>
+    <li><a href="contact.html">Contact Me</a></li> <!-- ✅ Add this line -->
+  </ul>
+</div>
+
         <div class="footer-section social-and-programmer">
           <div class="social">
             <h3>Connect With Me</h3>
