--- a/gallery.html
+++ b/gallery.html
@@ -146,7 +146,7 @@
   <!-- Floating Cat Feature -->
   <div class="floating-cat-container">
     <div class="speech-bubble" id="catSpeechBubble"></div>
-    <img src="images/kitty.png" alt="Floating Cat" class="floating-cat" id="floatingCat">
+    <img src="images/kitty.webp" alt="Floating Cat" class="floating-cat" id="floatingCat">
   </div>
   
 </body>
