--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </a>
           </div>
           <div class="card-wrapper">
-            <a href="#" class="card-link">
+            <a href="travelplaces.html" class="card-link">
               <section class="card">
                 <h2>Travel Places</h2>
                 <p>Explore the wonderful places I've been to and the stories behind them.</p>
