--- a/index.html
+++ b/index.html
@@ -115,17 +115,17 @@
           <p>Brewing life one paw at a time. This is my little space to share passions, tips, and adventures with coffee, cats, and all things lovely!</p>
         </div>
 
-<div class="footer-section links">
-  <h3>Quick Links</h3>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="me.html">About Me</a></li>
-    <li><a href="skincare.html">Skincare Tips</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
-    <li><a href="#">Portfolio</a></li>
-    <li><a href="contact.html">Contact Me</a></li> <!-- ✅ Add this line -->
-  </ul>
-</div>
+        <div class="footer-section links">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="me.html">About Me</a></li>
+            <li><a href="skincare.html">Skincare Tips</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="contact.html">Contact Me</a></li> <!-- ✅ Add this line -->
+          </ul>
+        </div>
 
         
         <div class="footer-section social-and-programmer">
@@ -141,9 +141,9 @@
             <h3>Developed By</h3>
             <p>Reuel Josh M. Eustaquio</p>
             <div class="social-icons">
-              <a href="https://www.facebook.com/markjayson.malaguit" target="_blank" aria-label="Programmer Facebook"><i class="fab fa-facebook-f"></i></a>
-              <a href="https://www.instagram.com/mark.malaguit/" target="_blank" aria-label="Programmer Instagram"><i class="fab fa-instagram"></i></a>
-              <a href="https://github.com/MarkJaysonMalaguit" target="_blank" aria-label="Programmer GitHub"><i class="fab fa-github"></i></a>
+              <a href="https://www.facebook.com/reueljosh.eustaquio" target="_blank" aria-label="Programmer Facebook"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://www.instagram.com/Juzswa/?fbclid=IwY2xjawLUEZFleHRuA2FlbQIxMABicmlkETFEaGpYYnJvYWIxTGpuc29YAR4biJ_k4-19cKHmmlWTaVLqp6i10s7HBq5KPWvC_m-4sg-KvbD1wlBa6Hx5qw_aem_uKq_0znbt5Coz4D2BWM56w#" target="_blank" aria-label="Programmer Instagram"><i class="fab fa-instagram"></i></a>
+              <a href="https://github.com/juswa77" target="_blank" aria-label="Programmer GitHub"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
