--- a/travelplaces.html
+++ b/travelplaces.html
@@ -7,26 +7,89 @@
   <link rel="icon" href="images/cat-icon.webp" type="image/png" />
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Quicksand&display=swap" rel="stylesheet" />
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+/>
 </head>
 <body>
   <div class="travel-container">
     <h1>My Travel Places ✈️</h1>
     <p>Some of the beautiful spots I’ve been to — full of memories and stories worth sharing.</p>
 
-    <!-- 🕌 UAE Featured Card -->
-    <div class="uae-featured-card">
-      <img src="../images/uae.jpg" alt="Burj Khalifa in UAE" />
-      <div class="uae-text">
-        <h2>United Arab Emirates 🇦🇪</h2>
-        <p>
-          A stunning blend of tradition and innovation — golden deserts, towering skyscrapers,
-          and unforgettable memories from Karen's Middle East journey.
-        </p>
+
+
+  <div class="uae-featured-card">
+  <div class="carousel">
+    <div class="carousel-images">
+      <img src="images/burj.jpg" alt="Burj Khalifa" />
+      <img src="images/burj2.jpg" alt="Desert Safari" />
+      <img src="images/burj3.jpg" alt="Dubai Marina" />
+    </div>
+    <button class="prev">&#10094;</button>
+    <button class="next">&#10095;</button>
+  </div>
+  <div class="uae-text">
+    <h2>United Arab Emirates 🇦🇪</h2>
+    <p>
+      A stunning blend of tradition and innovation — golden deserts, towering skyscrapers,
+      and unforgettable memories from Karen's Middle East journey.
+    </p>
+  </div>
+</div>
+
+
+
+    <!-- 🌍 Add Travel Grid here later if needed -->
+
+    <a href="index.html" class="back-button">← Back to Home</a>
+  </div>
+
+  <!-- 🌐 Footer -->
+  <footer class="site-footer">
+    <div class="footer-content">
+      <div class="footer-section about">
+        <h3>About Karen's Corner</h3>
+        <p>Brewing life one paw at a time. This is my little space to share passions, tips, and adventures with coffee, cats, and all things lovely!</p>
+      </div>
+
+      <div class="footer-section links">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="me.html">About Me</a></li>
+          <li><a href="skincare.html">Skincare Tips</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="contact.html">Contact Me</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section social-and-programmer">
+        <div class="social">
+          <h3>Connect With Me</h3>
+          <div class="social-icons">
+            <a href="https://www.facebook.com/karengaye888" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/_karengaye" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+        <div class="programmer-details">
+            <h3>Developed By</h3>
+            <p>Reuel Josh M. Eustaquio</p>
+            <div class="social-icons">
+              <a href="https://www.facebook.com/reueljosh.eustaquio" target="_blank" aria-label="Programmer Facebook"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://www.instagram.com/Juzswa/?fbclid=IwY2xjawLUEZFleHRuA2FlbQIxMABicmlkETFEaGpYYnJvYWIxTGpuc29YAR4biJ_k4-19cKHmmlWTaVLqp6i10s7HBq5KPWvC_m-4sg-KvbD1wlBa6Hx5qw_aem_uKq_0znbt5Coz4D2BWM56w#" target="_blank" aria-label="Programmer Instagram"><i class="fab fa-instagram"></i></a>
+              <a href="https://github.com/juswa77" target="_blank" aria-label="Programmer GitHub"><i class="fab fa-github"></i></a>
+            </div>
+        </div>
       </div>
     </div>
+    <div class="footer-bottom">
+      <p>&copy; 2025 Karen's Coffee & Cats. Made with love and cat hair.</p>
+    </div>
+  </footer>
 
-   
- 
+
 
   <script src="script.js"></script>
 </body>
