--- a/travelplaces.html
+++ b/travelplaces.html
@@ -23,8 +23,8 @@
   <div class="carousel">
     <div class="carousel-images">
       <img src="images/burj.jpg" alt="Burj Khalifa" />
-      <img src="images/burj2.jpg" alt="Desert Safari" />
-      <img src="images/burj3.jpg" alt="Dubai Marina" />
+      <img src="images/pic2.jpg" alt="Desert Safari" />
+      <img src="images/pic3.jpg" alt="Dubai Marina" />
     </div>
     <button class="prev">&#10094;</button>
     <button class="next">&#10095;</button>
