--- a/travelplaces.html
+++ b/travelplaces.html
@@ -22,12 +22,11 @@
   <div class="uae-featured-card">
   <div class="carousel">
     <div class="carousel-images">
-      <img src="images/burj.jpg" alt="Burj Khalifa" />
-      <img src="images/pic2.jpg" alt="Desert Safari" />
+      <img src="images/pic2.jpg" alt="Burj Khalifa" />
+      <img src="images/burjj.jpg" alt="Desert Safari" />
       <img src="images/pic3.jpg" alt="Dubai Marina" />
     </div>
-    <button class="prev">&#10094;</button>
-    <button class="next">&#10095;</button>
+ 
   </div>
   <div class="uae-text">
     <h2>United Arab Emirates 🇦🇪</h2>
