--- a/travelplaces.html
+++ b/travelplaces.html
@@ -29,7 +29,7 @@
  
   </div>
   <div class="uae-text">
-    <h2>United Arab Emirates 🇦🇪</h2>
+    <h2>United Arab Emirates u🇦🇪</h2>
     <p>
       A stunning blend of tradition and innovation — golden deserts, towering skyscrapers,
       and unforgettable memories from Karen's Middle East journey.
