--- a/index.html
+++ b/index.html
@@ -27,11 +27,22 @@
       </div>
     </header>
 
-    <nav class="category-tabs">
+ 
+
+
+
+   <nav class="category-tabs">
       <button class="tab-button active" data-category="personal">👤 Personal</button>
       <button class="tab-button" data-category="lifestyle">📷 Lifestyle</button>
       <button class="tab-button" data-category="portfolio">🛠️ Portfolio</button>
     </nav>
+
+
+
+<section class="random-welcome-feed" id="welcomeFeed">
+  <!-- JS will inject the random feed here -->
+</section>
+
 
 
 
@@ -106,6 +117,13 @@
           </div>
         </div>
       </section>
+
+
+
+
+
+
+      
     </main>
 
     <footer class="site-footer">
