--- a/travelplaces.html
+++ b/travelplaces.html
@@ -23,8 +23,8 @@
   <div class="carousel">
     <div class="carousel-images">
       <img src="images/pic2.jpg" alt="Burj Khalifa" />
-      <img src="images/burjj.jpg" alt="Desert Safari" />
-      <img src="images/pic3.jpg" alt="Dubai Marina" />
+      <img src="images/BURJJ.png" alt="Desert Safari" />
+      <img src="images/PIC3.png" alt="Dubai Marina" />
     </div>
  
   </div>
