--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="description" content="Karen's Cat Corner ☕ - A cozy space to explore lifestyle, skincare, gallery, and portfolio with a touch of cat and coffee love!">
+  <meta name="description" content="JUSWA's Cat Corner ☕ - A cozy space to explore lifestyle, skincare, gallery, and portfolio with a touch of cat and coffee love!">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Karen's Cat Corner ☕</title>
   <link rel="stylesheet" href="style.css"/>
