--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="wrapper">
     <header class="hero-header">
       <div class="hero-overlay">
-        <h1><span class="logo-text">Karen's</span> Cat Corner ☕ </h1>
+        <h1><span class="logo-text">jj's</span> Cat Corner ☕ </h1>
         <p>Brewing Life one paw at a time ☕🐱</p>
         <button id="darkModeToggle" class="dark-mode-toggle">
             <i class="fas fa-moon"></i>
