--- a/skincare.html
+++ b/skincare.html
@@ -62,28 +62,29 @@
           </div>
         </div>
 
-        <!-- My Favorite Skincare Tools Section -->
-        <div id="skincare-tools" class="skincare-section">
-          <h2>My Favorite Skincare Tools 🛠️</h2>
-          <p>Elevate your routine with these handy gadgets and accessories!</p>
-          <div class="tools-grid">
-            <div class="tool-card">
-              <img src="https://placehold.co/100x100/C19A6B/FFFFFF?text=Roller" alt="Jade Roller" class="tool-image">
-              <h3>Jade Roller</h3>
-              <p>Perfect for de-puffing and promoting lymphatic drainage. Use it with your favorite serum!</p>
-            </div>
-            <div class="tool-card">
-              <img src="https://placehold.co/100x100/C19A6B/FFFFFF?text=Brush" alt="Cleansing Brush" class="tool-image">
-              <h3>Cleansing Brush</h3>
-              <p>Provides a deeper cleanse, gently exfoliating and removing impurities for smoother skin.</p>
-            </div>
-            <div class="tool-card">
-              <img src="https://placehold.co/100x100/C19A6B/FFFFFF?text=Steamer" alt="Facial Steamer" class="tool-image">
-              <h3>Facial Steamer</h3>
-              <p>Opens up pores for better product absorption and a relaxing spa-like experience at home.</p>
-            </div>
-          </div>
-        </div>
+   <!-- My Favorite Skincare Tools Section -->
+<div id="skincare-tools" class="skincare-section">
+  <h2>My Favorite Skincare Tools 🛠️</h2>
+  <p>Elevate your routine with these handy gadgets and accessories!</p>
+  <div class="tools-grid">
+    <div class="tool-card">
+      <i class="fas fa-gem tool-icon"></i> <!-- You could keep this or use fa-circle-notch or fa-snowflake -->
+      <h3>Jade Roller</h3>
+      <p>Perfect for de-puffing and promoting lymphatic drainage. Use it with your favorite serum!</p>
+    </div>
+    <div class="tool-card">
+      <i class="fas fa-broom tool-icon"></i> <!-- Cleansing brush icon -->
+      <h3>Cleansing Brush</h3>
+      <p>Provides a deeper cleanse, gently exfoliating and removing impurities for smoother skin.</p>
+    </div>
+    <div class="tool-card">
+      <i class="fas fa-hot-tub tool-icon"></i> <!-- Facial steamer icon -->
+      <h3>Facial Steamer</h3>
+      <p>Opens up pores for better product absorption and a relaxing spa-like experience at home.</p>
+    </div>
+  </div>
+</div>
+
 
         <!-- Skincare Routine Steps Section -->
         <div id="skincare-routine" class="skincare-section">
