--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@
         <p>A collection of purr-fect moments and cherished memories.</p>
         <button id="darkModeToggle" class="dark-mode-toggle">
             <i class="fas fa-moon"></i>
-          </button>
+        </button>
       </div>
     </header>
 
@@ -28,128 +28,96 @@
         <p class="gallery-intro">Here's a glimpse into my world, one snapshot at a time. Enjoy the view!</p>
 
         <div class="photo-grid">
-          <!-- Gallery Item 1 -->
+          <!-- Gallery Items -->
           <div class="gallery-item">
             <img src="https://placehold.co/600x600/C19A6B/FFFFFF?text=Photo+1" alt="Gallery Photo 1">
             <div class="overlay">
               <p class="caption">Sunny afternoon with my favorite furball. ☀️🐱</p>
+              <i class="fas fa-heart like-icon"></i>
             </div>
           </div>
-          <!-- Gallery Item 2 -->
+
           <div class="gallery-item">
             <img src="https://placehold.co/600x600/6F4E37/FFFFFF?text=Photo+2" alt="Gallery Photo 2">
             <div class="overlay">
               <p class="caption">Coffee and contemplation. ☕</p>
+              <i class="fas fa-heart like-icon"></i>
             </div>
           </div>
-          <!-- Gallery Item 3 - Corrected structure -->
+
           <div class="gallery-item">
             <img src="https://placehold.co/600x600/4B2E2E/FFFFFF?text=Photo+3" alt="Gallery Photo 3">
             <div class="overlay">
               <p class="caption">A cozy corner for reading. 📚</p>
+              <i class="fas fa-heart like-icon"></i>
             </div>
           </div>
-          <!-- Gallery Item 4 - Corrected structure -->
+
           <div class="gallery-item">
             <img src="https://placehold.co/600x600/FFDDC1/000000?text=Photo+4" alt="Gallery Photo 4">
             <div class="overlay">
               <p class="caption">New adventures await! 🗺️</p>
+              <i class="fas fa-heart like-icon"></i>
             </div>
           </div>
-          <!-- Gallery Item 5 - Corrected structure -->
+
           <div class="gallery-item">
             <img src="https://placehold.co/600x600/C19A6B/000000?text=Photo+5" alt="Gallery Photo 5">
             <div class="overlay">
               <p class="caption">Sweet treats and good company. 🍦</p>
+              <i class="fas fa-heart like-icon"></i>
             </div>
           </div>
-          <!-- Gallery Item 6 - Corrected structure -->
+
           <div class="gallery-item">
             <img src="https://placehold.co/600x600/6F4E37/000000?text=Photo+6" alt="Gallery Photo 6">
             <div class="overlay">
               <p class="caption">Nature's beauty captured. 🌳</p>
+              <i class="fas fa-heart like-icon"></i>
             </div>
           </div>
-          <!-- Gallery Item 7 - Corrected structure -->
+
           <div class="gallery-item">
             <img src="https://placehold.co/600x600/4B2E2E/000000?text=Photo+7" alt="Gallery Photo 7">
             <div class="overlay">
               <p class="caption">Quiet moments of reflection. ✨</p>
+              <i class="fas fa-heart like-icon"></i>
             </div>
           </div>
-          <!-- Gallery Item 8 - Corrected structure -->
+
           <div class="gallery-item">
             <img src="https://placehold.co/600x600/FFDDC1/FFFFFF?text=Photo+8" alt="Gallery Photo 8">
             <div class="overlay">
               <p class="caption">Playful antics of my feline friends. 🐾</p>
+              <i class="fas fa-heart like-icon"></i>
             </div>
           </div>
-          <!-- Gallery Item 9 - Corrected structure -->
+
           <div class="gallery-item">
             <img src="https://placehold.co/600x600/C19A6B/FFFFFF?text=Photo+9" alt="Gallery Photo 9">
             <div class="overlay">
               <p class="caption">Dreamy skies and peaceful evenings. 🌅</p>
+              <i class="fas fa-heart like-icon"></i>
             </div>
           </div>
-          <!-- Add more gallery items as needed, always wrapped in <div class="gallery-item"> -->
         </div>
 
         <a href="index.html" class="back-button">Back to Home</a>
       </section>
     </main>
 
-  <footer class="site-footer">
+    <footer class="site-footer">
       <div class="footer-content">
-        <div class="footer-section about">
-          <h3>About Karen's Corner</h3>
-          <p>Brewing life one paw at a time. This is my little space to share passions, tips, and adventures with coffee, cats, and all things lovely!</p>
-        </div>
-      
-<div class="footer-section links">
-  <h3>Quick Links</h3>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="me.html">About Me</a></li>
-    <li><a href="skincare.html">Skincare Tips</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
-    <li><a href="#">Portfolio</a></li>
-    <li><a href="contact.html">Contact Me</a></li> <!-- ✅ Add this line -->
-  </ul>
-</div>
-
-        <div class="footer-section social-and-programmer">
-          <div class="social">
-            <h3>Connect With Me</h3>
-            <div class="social-icons">
-              <a href="https://www.facebook.com/karengaye888" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-              <a href="https://www.instagram.com/_karengaye/?fbclid=IwY2xjawLUDVlleHRuA2FlbQIxMABicmlkETFhWGtFSGIyQ29aS00xZHJXAR5tNmt7-rL-ysPkVC7OD6AZ691Wc7Tse3_NK1w_5ay1a6tXi2HfGp7ugU5CkA_aem_EddR91RVGTtV1Jp_wDuCNw#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-              <!-- Add more social links as needed -->
-            </div>
-          </div>
-          <div class="programmer-details">
-            <h3>Developed By</h3>
-            <p>Reuel Josh M. Eustaquio</p>
-            <div class="social-icons">
-              <a href="https://www.facebook.com/reueljosh.eustaquio" target="_blank" aria-label="Programmer Facebook"><i class="fab fa-facebook-f"></i></a>
-              <a href="https://www.instagram.com/Juzswa/?fbclid=IwY2xjawLUEZFleHRuA2FlbQIxMABicmlkETFEaGpYYnJvYWIxTGpuc29YAR4biJ_k4-19cKHmmlWTaVLqp6i10s7HBq5KPWvC_m-4sg-KvbD1wlBa6Hx5qw_aem_uKq_0znbt5Coz4D2BWM56w#" target="_blank" aria-label="Programmer Instagram"><i class="fab fa-instagram"></i></a>
-              <a href="https://github.com/juswa77" target="_blank" aria-label="Programmer GitHub"><i class="fab fa-github"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="footer-bottom">
         <p>&copy; 2025 Karen's Coffee & Cats. Made with love and cat hair.</p>
       </div>
     </footer>
   </div>
 
-  <!-- Floating Cat Feature -->
   <div class="floating-cat-container">
     <div class="speech-bubble" id="catSpeechBubble"></div>
     <img src="images/kitty.webp" alt="Floating Cat" class="floating-cat" id="floatingCat">
   </div>
-  
-</body>
-<script src="script.js"></script>
 
+  <script src="script.js"></script>
+</body>
 </html>
